gcc/testsuite/g++.dg/cpp0x/auto18.C
// { dg-options "-std=c++11" }

void f()
{
  auto val = val;  // { dg-error "auto" }
}
